tests/script_runtime_errors/subslice_out_of_bounds/error.txt
Error: 
    1 | event[1:4]
      |       ^^^ Trying to access an index that is out of range 1..3